<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_app_meteo"
        android:layout_margin="@dimen/default_large_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenu"
        android:textSize="@dimen/default_title_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/default_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:text="@string/main_activity_description"
        android:layout_margin="@dimen/default_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/main_activity_Calendrier"
            android:layout_margin="@dimen/default_margin"/>

        <Button
            android:id="@+id/buttonDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LaDate"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_primary_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>

        <Button
            android:id="@+id/meteoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LaMeteo"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>

    </LinearLayout>

</LinearLayout>
